--- a/JMS/Jun2019/nbproject/project.properties
+++ b/JMS/Jun2019/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JMS_Jun_2019.jar
+dist.jar=${dist.dir}/Jun2019.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JMS_Jun_2019
+dist.jlink.output=${dist.jlink.dir}/Jun2019
 excludes=
 includes=**
 jar.compress=false
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JMS_Jun_2019
+jlink.launcher.name=Jun2019
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
