--- a/JMS/Jun2019/build.xml
+++ b/JMS/Jun2019/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="JMS_Jun_2019" default="default" basedir=".">
-    <description>Builds, tests, and runs the project JMS_Jun_2019.</description>
+<project name="Jun2019" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Jun2019.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="JMS_Jun_2019-impl.jar">
+        <target name="run" depends="Jun2019-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
