--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /JMS/Septembar2019/build/
 /JMS/April2021/nbproject/private/
 /JMS/April2021/build/
+/JMS/Jun2019(1)/nbproject/private/
+/JMS/Jun2019(1)/build/
