--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "RMI\\21.06.2021",
         "RMI\\26.08.2019",
         "RMI\\21.09.2020",
-        "RMI\\26.03.2019"
+        "RMI\\26.03.2019",
+        "RMI\\Oktobar2021"
     ]
 }
