--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "RMI\\26.08.2019",
         "RMI\\21.09.2020",
         "RMI\\26.03.2019",
-        "RMI\\Oktobar2021"
+        "RMI\\Oktobar2021",
+        "RMI\\Septembar2021"
     ]
 }
