--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "RMI\\21.09.2020",
         "RMI\\26.03.2019",
         "RMI\\Oktobar2021",
-        "RMI\\Septembar2021"
+        "RMI\\Septembar2021",
+        "RMI\\Jun22021"
     ]
 }
