--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "RMI\\26.03.2019",
         "RMI\\Oktobar2021",
         "RMI\\Septembar2021",
-        "RMI\\Jun22021"
+        "RMI\\Jun22021",
+        "RMI\\Oktobar2020",
+        "RMI\\April2021"
     ]
 }
