--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "RMI\\Septembar2021",
         "RMI\\Jun22021",
         "RMI\\Oktobar2020",
-        "RMI\\April2021"
+        "RMI\\April2021",
+        "RMI\\Januar2019"
     ]
 }
